[LongNB] refactor class BorrowingService